--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,22 @@ services: docker
 
 env:
   matrix:
+  - INSTANCE=service50-multi-centos-5
+  - INSTANCE=service55-multi-centos-5
   - INSTANCE=service55-multi-centos-6
   - INSTANCE=service55-multi-centos-7
   - INSTANCE=service55-multi-ubuntu-1204
   - INSTANCE=service55-multi-ubuntu-1404
+  - INSTANCE=service56-multi-centos-5
+  - INSTANCE=service56-multi-centos-6
+  - INSTANCE=service56-multi-centos-7
+  - INSTANCE=service56-multi-fedora-21
+  - INSTANCE=service56-multi-ubuntu-1404
+  - INSTANCE=service56-multi-ubuntu-1504
+  - INSTANCE=service57-multi-centos-5
+  - INSTANCE=service57-multi-centos-6
+  - INSTANCE=service57-multi-centos-7
+  - INSTANCE=service57-multi-fedora-21
   fast_finish: true
 
 before_script:
