--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,75 +1,30 @@
----
 driver:
-  name: dokken
-  chef_version: 12.5.1
-  privileged: true # because Docker and SystemD/Upstart
-
-transport:
-  name: dokken
+  name: vagrant
+  customize:
+    memory: 1024
 
 provisioner:
-  name: dokken
-
-verifier:
-  root_path: '/opt/verifier'
-  sudo: false
+  name: chef_zero
 
 platforms:
-- name: debian-8
-  driver:
-    image: debian:8
-    pid_one_command: /bin/systemd
-
-- name: centos-5
-  driver:
-    image: centos:5
-
-- name: centos-6
-  driver:
-    image: centos:6
-    intermediate_instructions:
-      - RUN yum -y install tar which initscripts
-
-- name: centos-7
-  driver:
-    image: centos:7
-    intermediate_instructions:
-      - RUN yum clean all
-      - RUN yum -y install net-tools lsof
-    pid_one_command: /usr/lib/systemd/systemd
-
-- name: fedora-21
-  driver:
-    image: fedora:21
-    intermediate_instructions:
-    - RUN yum clean all
-    pid_one_command: /usr/lib/systemd/systemd
-    intermediate_instructions:
-      - RUN yum -y install tar
-
-- name: ubuntu-12.04
-  driver:
-    image: ubuntu-upstart:12.04
-    pid_one_command: /sbin/init
-    intermediate_instructions:
-      - RUN /usr/bin/apt-get update
-      - RUN /usr/bin/apt-get install apt-transport-https net-tools -y
-
-- name: ubuntu-14.04
-  driver:
-    image: ubuntu-upstart:14.04
-    pid_one_command: /sbin/init
-    intermediate_instructions:
-      - RUN /usr/bin/apt-get update
-      - RUN /usr/bin/apt-get install apt-transport-https net-tools -y
-
-- name: ubuntu-15.04
-  driver:
-    image: ubuntu:15.04
-    pid_one_command: /bin/systemd
-    intermediate_instructions:
-      - RUN /usr/bin/apt-get update
-      - RUN /usr/bin/apt-get install apt-transport-https net-tools -y
+  - name: centos-5.11
+    run_list: selinux::disabled
+  - name: centos-6.7
+    run_list: selinux::disabled
+  - name: centos-7.2
+    run_list: selinux::disabled
+  - name: debian-7.9
+    run_list: apt::default
+  - name: debian-8.2
+    run_list: apt::default
+  - name: fedora-22
+    run_list: yum::dnf_yum_compat
+  - name: fedora-23
+    run_list: yum::dnf_yum_compat
+  - name: ubuntu-12.04
+    run_list: apt::default
+  - name: ubuntu-14.04
+    run_list: apt::default
 
 suites:
   #
@@ -79,7 +34,7 @@ suites:
     run_list:
     - recipe[mysql_service_test::single]
     includes: [
-      'centos-5.8'
+      'centos-5.11'
     ]
     attributes:
       mysql:
@@ -89,8 +44,8 @@ suites:
     run_list:
     - recipe[mysql_service_test::single]
     includes: [
-      'centos-5',
-      'centos-6'
+      'centos-5.11',
+      'centos-6.7',
     ]
     attributes:
       mysql:
@@ -100,11 +55,13 @@ suites:
     run_list:
     - recipe[mysql_service_test::single]
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
+      'debian-7.9',
+      'debian-8.2',
       'ubuntu-12.04',
-      'ubuntu-14.04',
+      'ubuntu-14.04'
     ]
     attributes:
       mysql:
@@ -114,12 +71,15 @@ suites:
     run_list:
     - recipe[mysql_service_test::single]
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
-      'fedora-21',
-      'ubuntu-14.04',
-      'ubuntu-15.04'
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
+      'fedora-22',
+      'fedora-23',
+      'debian-7.9',
+      'debian-8.2',
+      'ubuntu-12.04',
+      'ubuntu-14.04'
     ]
     attributes:
       mysql:
@@ -129,12 +89,15 @@ suites:
     run_list:
     - recipe[mysql_service_test::single]
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
-      'redhat-6',
-      'redhat-7',
-      'fedora-21'
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
+      'fedora-22',
+      'fedora-23',
+      'debian-7.9',
+      'debian-8.2',
+      'ubuntu-12.04',
+      'ubuntu-14.04'
     ]
     attributes:
       mysql:
@@ -144,7 +107,7 @@ suites:
     run_list:
     - recipe[mysql_service_test::multi]
     includes: [
-      'centos-5'
+      'centos-5.11'
     ]
     attributes:
       mysql:
@@ -158,7 +121,7 @@ suites:
     run_list:
     - recipe[mysql_service_test::multi]
     includes: [
-      'centos-5.8'
+      'centos-5.11'
     ]
     attributes:
       mysql:
@@ -172,11 +135,15 @@ suites:
     run_list:
     - recipe[mysql_service_test::multi]
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
+      'fedora-22',
+      'fedora-23',
+      'debian-7.9',
+      'debian-8.2',
       'ubuntu-12.04',
-      'ubuntu-14.04',
+      'ubuntu-14.04'
     ]
     attributes:
       mysql:
@@ -190,12 +157,15 @@ suites:
     run_list:
     - recipe[mysql_service_test::multi]
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
-      'fedora-21',
-      'ubuntu-14.04',
-      'ubuntu-15.04'
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
+      'fedora-22',
+      'fedora-23',
+      'debian-7.9',
+      'debian-8.2',
+      'ubuntu-12.04',
+      'ubuntu-14.04'
     ]
     attributes:
       mysql:
@@ -209,10 +179,15 @@ suites:
     run_list:
     - recipe[mysql_service_test::multi]
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
-      'fedora-21',
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
+      'fedora-22',
+      'fedora-23',
+      'debian-7.9',
+      'debian-8.2',
+      'ubuntu-12.04',
+      'ubuntu-14.04'
     ]
     attributes:
       mysql:
@@ -232,7 +207,7 @@ suites:
       mysql:
        version: '5.0'
     includes: [
-      'centos-5'
+      'centos-5.11'
     ]
 
   - name: client51
@@ -242,8 +217,9 @@ suites:
       mysql:
        version: '5.1'
     includes: [
-      'centos-5',
-      'centos-6'
+      'centos-5.11',
+      'centos-6.7',
+      'ubuntu-12.04'
     ]
 
   - name: client55
@@ -253,11 +229,15 @@ suites:
       mysql:
        version: '5.5'
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
+      'fedora-22',
+      'fedora-23',
+      'debian-7.9',
+      'debian-8.2',
       'ubuntu-12.04',
-      'ubuntu-14.04',
+      'ubuntu-14.04'
     ]
 
   - name: client56
@@ -267,12 +247,15 @@ suites:
       mysql:
        version: '5.6'
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
-      'fedora-21',
-      'ubuntu-14.04',
-      'ubuntu-15.04'
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
+      'fedora-22',
+      'fedora-23',
+      'debian-7.9',
+      'debian-8.2',
+      'ubuntu-12.04',
+      'ubuntu-14.04'
     ]
 
   - name: client57
@@ -282,10 +265,15 @@ suites:
       mysql:
        version: '5.7'
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
-      'fedora-21'
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
+      'fedora-22',
+      'fedora-23',
+      'debian-7.9',
+      'debian-8.2',
+      'ubuntu-12.04',
+      'ubuntu-14.04'
     ]
 
   #
@@ -295,7 +283,7 @@ suites:
     run_list:
     - recipe[mysql_config_test]
     includes: [
-      'centos-5'
+      'centos-5.11'
     ]
     attributes:
       mysql:
@@ -305,7 +293,7 @@ suites:
     run_list:
     - recipe[mysql_config_test]
     includes: [
-      'centos-5'
+      'centos-5.11',
     ]
     attributes:
       mysql:
@@ -315,9 +303,13 @@ suites:
     run_list:
     - recipe[mysql_config_test]
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
+      'fedora-22',
+      'fedora-23',
+      'debian-7.9',
+      'debian-8.2',
       'ubuntu-12.04',
       'ubuntu-14.04'
     ]
@@ -329,12 +321,15 @@ suites:
     run_list:
     - recipe[mysql_config_test]
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
-      'fedora-21',
-      'ubuntu-14.04',
-      'ubuntu-15.04'
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
+      'fedora-22',
+      'fedora-23',
+      'debian-7.9',
+      'debian-8.2',
+      'ubuntu-12.04',
+      'ubuntu-14.04'
     ]
     attributes:
       mysql:
@@ -344,12 +339,15 @@ suites:
     run_list:
     - recipe[mysql_config_test]
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
-      'redhat-6',
-      'redhat-7',
-      'fedora-21'
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
+      'fedora-22',
+      'fedora-23',
+      'debian-7.9',
+      'debian-8.2',
+      'ubuntu-12.04',
+      'ubuntu-14.04'
     ]
     attributes:
       mysql:
@@ -362,11 +360,13 @@ suites:
     run_list:
     - recipe[mysql_replication_test]
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
-      'fedora-21',
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
+      'fedora-22',
+      'fedora-23',
+      'debian-7.9',
+      'debian-8.2',
       'ubuntu-12.04',
-      'ubuntu-14.04',
-      'ubuntu-15.04'
+      'ubuntu-14.04'
     ]
