Turn on lint/unit testing in travis again

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,11 +41,11 @@ before_script:
 
 script:
   - /opt/chefdk/embedded/bin/chef --version
-  # - /opt/chefdk/embedded/bin/rubocop --version
-  # - /opt/chefdk/embedded/bin/rubocop
-  # - /opt/chefdk/embedded/bin/foodcritic --version
-  # - /opt/chefdk/embedded/bin/foodcritic . --exclude spec
-  # - /opt/chefdk/embedded/bin/rspec
+  - /opt/chefdk/embedded/bin/rubocop --version
+  - /opt/chefdk/embedded/bin/rubocop
+  - /opt/chefdk/embedded/bin/foodcritic --version
+  - /opt/chefdk/embedded/bin/foodcritic . --exclude spec -f any
+  - /opt/chefdk/embedded/bin/rspec
   - KITCHEN_LOCAL_YAML=.kitchen.dokken.yml kitchen verify ${INSTANCE}
 
 after_script:
