--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -25,6 +25,7 @@ platforms:
     run_list: apt::default
   - name: ubuntu-14.04
     run_list: apt::default
+  - name: opensuse-13.2
 
 suites:
   #
@@ -76,7 +77,8 @@ suites:
       'centos-7.2',
       'fedora-22',
       'fedora-23',
-      'ubuntu-14.04'
+      'ubuntu-14.04',
+      'opensuse-13.2'
     ]
     attributes:
       mysql:
@@ -153,7 +155,8 @@ suites:
       'centos-7.2',
       'fedora-22',
       'fedora-23',
-      'ubuntu-14.04'
+      'ubuntu-14.04',
+      'opensuse-13.2'
     ]
     attributes:
       mysql:
@@ -297,7 +300,8 @@ suites:
       'centos-7.2',
       'fedora-22',
       'fedora-23',
-      'ubuntu-14.04'
+      'ubuntu-14.04',
+      'opensuse-13.2'
     ]
     attributes:
       mysql:
@@ -332,5 +336,6 @@ suites:
       'debian-7.9',
       'debian-8.2',
       'ubuntu-12.04',
-      'ubuntu-14.04'
+      'ubuntu-14.04',
+      'opensuse-13.2'
     ]
