--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -25,6 +25,8 @@ platforms:
     run_list: apt::default
   - name: ubuntu-14.04
     run_list: apt::default
+  - name: ubuntu-16.04
+    run_list: apt::default
   - name: opensuse-13.2
   - name: omnios-r151014
     driver:
@@ -97,7 +99,8 @@ suites:
       'centos-6.7',
       'centos-7.2',
       'fedora-22',
-      'fedora-23'
+      'fedora-23',
+      'ubuntu-16.04'
     ]
     attributes:
       mysql:
@@ -181,7 +184,8 @@ suites:
       'centos-6.7',
       'centos-7.2',
       'fedora-22',
-      'fedora-23'
+      'fedora-23',
+      'ubuntu-16.04'
     ]
     attributes:
       mysql:
@@ -189,6 +193,7 @@ suites:
        port: '3308'
        data_dir: '/data/instance-2'
        run_user: 'bob'
+       run_group: 'bob'
        initial_root_password: 'string with spaces'
 
   #
@@ -258,7 +263,8 @@ suites:
       'centos-6.7',
       'centos-7.2',
       'fedora-22',
-      'fedora-23'
+      'fedora-23',
+      'ubuntu-16.04'
     ]
 
   #
@@ -326,7 +332,8 @@ suites:
       'centos-6.7',
       'centos-7.2',
       'fedora-22',
-      'fedora-23'
+      'fedora-23',
+      'ubuntu-16.04'
     ]
     attributes:
       mysql:
@@ -348,6 +355,7 @@ suites:
       'debian-8.2',
       'ubuntu-12.04',
       'ubuntu-14.04',
+      'ubuntu-16.04',
       'opensuse-13.2',
       'omnios-r151014'
     ]
