--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@
 rvm: 2.2
 
 sudo: required
+dist: trusty
 
 addons:
   apt:
@@ -32,6 +33,7 @@ env:
   - INSTANCE=service57-multi-centos-6
   - INSTANCE=service57-multi-centos-7
   - INSTANCE=service57-multi-fedora-23
+  - INSTANCE=service57-multi-ubuntu-1604
   fast_finish: true
 
 before_script:
