Convert to cookstyle + update dokken config
Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -26,29 +26,33 @@ platforms:
 - name: centos-5
   driver:
     image: centos:5
+    platform: rhel
+    pid_one_command: /sbin/init
+    intermediate_instructions:
+      - RUN yum install -y which initscripts
 
 - name: centos-6
   driver:
     image: centos:6
+    platform: rhel
+    pid_one_command: /sbin/init
     intermediate_instructions:
-      - RUN yum -y install tar which initscripts
+      - RUN yum -y install which initscripts
 
 - name: centos-7
   driver:
     image: centos:7
-    intermediate_instructions:
-      - RUN yum clean all
-      - RUN yum -y install net-tools lsof
+    platform: rhel
     pid_one_command: /usr/lib/systemd/systemd
+    intermediate_instructions:
+      - RUN yum -y install net-tools lsof
 
 - name: fedora-23
   driver:
     image: fedora:23
-    intermediate_instructions:
-    - RUN yum clean all
     pid_one_command: /usr/lib/systemd/systemd
     intermediate_instructions:
-      - RUN yum -y install tar yum
+      - RUN dnf -y install yum which
 
 - name: ubuntu-12.04
   driver:
@@ -73,6 +77,11 @@ platforms:
     intermediate_instructions:
       - RUN /usr/bin/apt-get update
       - RUN /usr/bin/apt-get install apt-transport-https net-tools -y
+
+- name: opensuse-13.2
+  driver:
+    image: opensuse:13.2
+    pid_one_command: /bin/systemd
 
 suites:
   #
