--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
----
-rvm: 2.2
-
 sudo: required
 dist: trusty
 
+# install the pre-release chef-dk.  Use chef-stable-precise to install the stable release
 addons:
   apt:
     sources:
@@ -11,7 +9,9 @@ addons:
     packages:
       - chefdk
 
-install: echo "skip bundle install"
+branches:
+  only:
+  - master
 
 services: docker
 
@@ -34,23 +34,27 @@ env:
   - INSTANCE=service57-multi-centos-7
   - INSTANCE=service57-multi-fedora-23
   - INSTANCE=service57-multi-ubuntu-1604
-  fast_finish: true
 
+# Don't `bundle install`
+install: echo "skip bundle install"
+
+# Ensure we make ChefDK's Ruby the default
 before_script:
+  # https://github.com/zuazo/kitchen-in-travis-native/issues/1#issuecomment-142230889
   - sudo iptables -L DOCKER || ( echo "DOCKER iptables chain missing" ; sudo iptables -N DOCKER )
   - eval "$(/opt/chefdk/bin/chef shell-init bash)"
   - /opt/chefdk/embedded/bin/chef gem install kitchen-dokken
-
-script:
   - /opt/chefdk/embedded/bin/chef --version
-  - /opt/chefdk/embedded/bin/rubocop --version
-  - /opt/chefdk/embedded/bin/rubocop
+  - /opt/chefdk/embedded/bin/cookstyle --version
   - /opt/chefdk/embedded/bin/foodcritic --version
-  - /opt/chefdk/embedded/bin/foodcritic . --exclude spec -f any
-  - /opt/chefdk/embedded/bin/rspec
-  - KITCHEN_LOCAL_YAML=.kitchen.dokken.yml kitchen verify ${INSTANCE}
 
-after_script:
-  - docker images
-  - docker ps -a
-  - cat .kitchen/logs/kitchen.log
+script: KITCHEN_LOCAL_YAML=.kitchen.docker.yml /opt/chefdk/embedded/bin/kitchen verify ${INSTANCE}
+
+matrix:
+  include:
+  - script: /opt/chefdk/embedded/bin/cookstyle
+    env:  COOKSTYLE=1
+  - script: /opt/chefdk/embedded/bin/foodcritic . --exclude spec -f any
+    env:  FOODCRITIC=1
+  - script: /opt/chefdk/embedded/bin/rspec
+    env:  CHEFSPEC=1
