--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -1,4 +1,3 @@
----
 driver:
   name: dokken
   chef_version: latest
@@ -47,9 +46,9 @@ platforms:
     intermediate_instructions:
       - RUN yum -y install net-tools lsof
 
-- name: fedora-23
+- name: fedora-latest
   driver:
-    image: fedora:23
+    image: fedora:latest
     pid_one_command: /usr/lib/systemd/systemd
     intermediate_instructions:
       - RUN dnf -y install yum which
@@ -81,6 +80,11 @@ platforms:
 - name: opensuse-13.2
   driver:
     image: opensuse:13.2
+    pid_one_command: /bin/systemd
+
+- name: opensuse-42.1
+  driver:
+    image: opensuse:42.1
     pid_one_command: /bin/systemd
 
 suites:
@@ -129,7 +133,7 @@ suites:
       'centos-5',
       'centos-6',
       'centos-7',
-      'fedora-23',
+      'fedora-latest',
       'ubuntu-14.04'
      ]
     attributes:
@@ -145,7 +149,7 @@ suites:
       'centos-7',
       'redhat-6',
       'redhat-7',
-      'fedora-23',
+      'fedora-latest',
       'ubuntu-16.04'
      ]
     attributes:
@@ -205,7 +209,7 @@ suites:
       'centos-5',
       'centos-6',
       'centos-7',
-      'fedora-23',
+      'fedora-latest',
       'ubuntu-14.04'
      ]
     attributes:
@@ -223,7 +227,7 @@ suites:
       'centos-5',
       'centos-6',
       'centos-7',
-      'fedora-23',
+      'fedora-latest',
       'ubuntu-16.04'
      ]
     attributes:
@@ -282,7 +286,7 @@ suites:
       'centos-5',
       'centos-6',
       'centos-7',
-      'fedora-23',
+      'fedora-latest',
       'ubuntu-14.04'
      ]
 
@@ -296,7 +300,7 @@ suites:
       'centos-5',
       'centos-6',
       'centos-7',
-      'fedora-23',
+      'fedora-latest',
       'ubuntu-16.04'
      ]
 
@@ -344,7 +348,7 @@ suites:
       'centos-5',
       'centos-6',
       'centos-7',
-      'fedora-23',
+      'fedora-latest',
       'ubuntu-14.04'
      ]
     attributes:
@@ -360,7 +364,7 @@ suites:
       'centos-7',
       'redhat-6',
       'redhat-7',
-      'fedora-23',
+      'fedora-latest',
       'ubuntu-16.04'
 
      ]
@@ -378,7 +382,7 @@ suites:
       'centos-5',
       'centos-6',
       'centos-7',
-      'fedora-23',
+      'fedora-latest',
       'ubuntu-12.04',
       'ubuntu-14.04',
       'ubuntu-16.04'
