--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,8 @@ env:
   - INSTANCE=service56-multi-centos-7
   - INSTANCE=service56-multi-fedora-latest
   - INSTANCE=service56-multi-ubuntu-1404
+  - INSTANCE=service56-multi-opensuse-132
+  - INSTANCE=service56-multi-opensuse-421
   - INSTANCE=service57-multi-centos-6
   - INSTANCE=service57-multi-centos-7
   - INSTANCE=service57-multi-fedora-latest
