--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -54,12 +54,13 @@ platforms:
   run_list:
     - recipe[mysql_test::yum_repo]
 
-- name: debian-7
-  driver:
-    image: debian:7
-    intermediate_instructions:
-      - RUN /usr/bin/apt-get update
-      - RUN /usr/bin/apt-get install apt-transport-https net-tools -y
+# FIXME: debian-7 multi is broken for some reason
+# - name: debian-7
+#   driver:
+#     image: debian:7
+#     intermediate_instructions:
+#       - RUN /usr/bin/apt-get update
+#       - RUN /usr/bin/apt-get install apt-transport-https net-tools -y
 
 - name: debian-8
   driver:
