--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -11,17 +11,21 @@ platforms:
     run_list: selinux::disabled
   - name: centos-6.7
     run_list: selinux::disabled
-  - name: centos-7.1
+  - name: centos-7.2
     run_list: selinux::disabled
-  - name: debian-7.8
+  - name: debian-7.10
     run_list: apt::default
-  - name: debian-8.1
+  - name: debian-8.4    
     run_list: apt::default
-  - name: fedora-21
   - name: fedora-22
+    run_list: yum::dnf_yum_compat
+  - name: fedora-23
+    run_list: yum::dnf_yum_compat        
   - name: ubuntu-12.04
     run_list: apt::default
   - name: ubuntu-14.04
+    run_list: apt::default
+  - name: ubuntu-16.04
     run_list: apt::default
       
 suites:
@@ -35,8 +39,7 @@ suites:
       mysql:
        version: '5.0'
     includes: [
-      'centos-5',
-      'ubuntu-10.04'
+      'centos-5.11'
     ]
 
   - name: installation_client_package-51
@@ -46,8 +49,8 @@ suites:
       mysql:
        version: '5.1'
     includes: [
-      'centos-5',
-      'centos-6'
+      'centos-5.11',
+      'centos-6.7'
     ]
 
   - name: installation_client_package-55
@@ -57,11 +60,11 @@ suites:
       mysql:
        version: '5.5'
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
-      'debian-7',
-      'debian-8',
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
+      'debian-7.9',
+      'debian-8.4',
       'ubuntu-12.04',
       'ubuntu-14.04'
     ]
@@ -73,9 +76,9 @@ suites:
       mysql:
        version: '5.6'
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
       'fedora-latest',
       'ubuntu-14.04',
       'opensuse-13.2',
@@ -89,9 +92,9 @@ suites:
       mysql:
        version: '5.7'
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
       'fedora-latest',
       'ubuntu-16.04'
     ]
@@ -106,8 +109,7 @@ suites:
       mysql:
        version: '5.0'
     includes: [
-      'centos-5',
-      'ubuntu-10.04'
+      'centos-5.11'
     ]
 
   - name: installation_server_package-51
@@ -117,8 +119,8 @@ suites:
       mysql:
        version: '5.1'
     includes: [
-      'centos-5',
-      'centos-6'
+      'centos-5.11',
+      'centos-6.7'
     ]
 
   - name: installation_server_package-55
@@ -128,11 +130,11 @@ suites:
       mysql:
        version: '5.5'
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
-      'debian-7',
-      'debian-8',
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
+      'debian-7.9',
+      'debian-8.4',
       'ubuntu-12.04',
       'ubuntu-14.04'
     ]
@@ -144,9 +146,9 @@ suites:
       mysql:
        version: '5.6'
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
       'fedora-latest',
       'ubuntu-14.04',
       'opensuse-13.2',
@@ -160,9 +162,9 @@ suites:
       mysql:
        version: '5.7'
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
       'fedora-latest',
       'ubuntu-16.04'
     ]
@@ -375,9 +377,9 @@ suites:
     run_list:
     - recipe[mysql_test::config]
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
       'fedora-latest',
       'ubuntu-14.04',
       'opensuse-13.2',
@@ -391,9 +393,9 @@ suites:
     run_list:
     - recipe[mysql_test::config]
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
       'redhat-6',
       'redhat-7',
       'fedora-latest',
@@ -410,9 +412,9 @@ suites:
     run_list:
     - recipe[mysql_test::smoke]
     includes: [
-      'centos-5',
-      'centos-6',
-      'centos-7',
+      'centos-5.11',
+      'centos-6.7',
+      'centos-7.2',
       'fedora-latest',
       'ubuntu-12.04',
       'ubuntu-14.04',
