Fix the client action to be create
This was changed in the 8.0.1 release, but the docs still reference the
old name as do dependent cookbooks
Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ matrix:
   include:
   - script: /opt/chefdk/embedded/bin/cookstyle
     env:  COOKSTYLE=1
-  - script: /opt/chefdk/embedded/bin/foodcritic . --exclude spec -f any
+  - script: /opt/chefdk/embedded/bin/foodcritic . --exclude spec -f any -P
     env:  FOODCRITIC=1
   - script: /opt/chefdk/embedded/bin/rspec
     env:  CHEFSPEC=1
