--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -28,7 +28,10 @@ platforms:
   - name: debian-8.5
     run_list: apt::default
   - name: fedora-24
-    run_list: yum::dnf_yum_compat
+    run_list:
+      - recipe[yum::dnf_yum_compat]
+      - recipe[selinux::disabled]
+      - recipe[mysql_test::yum_repo]
   - name: ubuntu-12.04
     run_list: apt::default
   - name: ubuntu-14.04
