There isn’t Fedora 25 packages yet so pin to 24 in travis
Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -178,7 +178,7 @@ suites:
       'centos-5.11',
       'centos-6.8',
       'centos-7.2',
-      'fedora-latest',
+      'fedora-24',
       'ubuntu-16.04'
     ]
 
