--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -44,7 +44,7 @@ platforms:
   run_list:
     - recipe[mysql_test::yum_repo]
 
-- name: fedora-latest
+- name: fedora-24
   driver:
     image: fedora:latest
     pid_one_command: /usr/lib/systemd/systemd
@@ -154,7 +154,7 @@ suites:
       'centos-5',
       'centos-6',
       'centos-7',
-      'fedora-latest',
+      'fedora-24',
       'ubuntu-14.04',
       'opensuse-13.2',
       'opensuse-42.1'
@@ -170,7 +170,7 @@ suites:
       'centos-5',
       'centos-6',
       'centos-7',
-      'fedora-latest',
+      'fedora-24',
       'ubuntu-16.04'
     ]
 
@@ -224,7 +224,7 @@ suites:
       'centos-5',
       'centos-6',
       'centos-7',
-      'fedora-latest',
+      'fedora-24',
       'ubuntu-14.04',
       'opensuse-13.2',
       'opensuse-42.1'
@@ -240,7 +240,7 @@ suites:
       'centos-5',
       'centos-6',
       'centos-7',
-      'fedora-latest',
+      'fedora-24',
       'ubuntu-16.04'
     ]
 
@@ -294,7 +294,7 @@ suites:
       'centos-5',
       'centos-6',
       'centos-7',
-      'fedora-latest',
+      'fedora-24',
       'ubuntu-14.04',
       'opensuse-13.2',
       'opensuse-42.1'
@@ -310,7 +310,7 @@ suites:
       'centos-5',
       'centos-6',
       'centos-7',
-      'fedora-latest',
+      'fedora-24',
       'ubuntu-16.04'
      ]
     attributes:
@@ -377,7 +377,7 @@ suites:
       'centos-5',
       'centos-6',
       'centos-7',
-      'fedora-latest',
+      'fedora-24',
       'ubuntu-14.04',
       'opensuse-13.2',
       'opensuse-42.1'
@@ -398,7 +398,7 @@ suites:
       'centos-5',
       'centos-6',
       'centos-7',
-      'fedora-latest',
+      'fedora-24',
       'ubuntu-16.04'
      ]
     attributes:
@@ -455,7 +455,7 @@ suites:
       'centos-5',
       'centos-6',
       'centos-7',
-      'fedora-latest',
+      'fedora-24',
       'ubuntu-14.04',
       'opensuse-13.2',
       'opensuse-42.1'
@@ -473,7 +473,7 @@ suites:
       'centos-7',
       'redhat-6',
       'redhat-7',
-      'fedora-latest',
+      'fedora-24',
       'ubuntu-16.04'
      ]
     attributes:
@@ -490,13 +490,13 @@ suites:
       'centos-5',
       'centos-6',
       'centos-7',
-      'fedora-latest',
+      'fedora-24',
       'debian-7',
       'debian-8',
       'ubuntu-12.04',
       'ubuntu-14.04',
       'ubuntu-16.04',
-      'fedora-latest',
+      'fedora-24',
       'opensuse-13.2',
       'opensuse-42.1'
      ]
