--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -22,7 +22,7 @@ platforms:
       - RUN yum install -y which initscripts
   run_list:
     - recipe[mysql_test::yum_repo]
-      
+
 - name: centos-6
   driver:
     image: centos:6
@@ -32,7 +32,7 @@ platforms:
       - RUN yum -y install which initscripts
   run_list:
     - recipe[mysql_test::yum_repo]
-      
+
 - name: centos-7
   driver:
     image: centos:7
@@ -46,7 +46,7 @@ platforms:
 
 - name: fedora-24
   driver:
-    image: fedora:latest
+    image: fedora:24
     pid_one_command: /usr/lib/systemd/systemd
     intermediate_instructions:
       - RUN dnf -y install yum which
@@ -249,7 +249,7 @@ suites:
   #
 
   # singles
-  
+
   - name: service50-single
     run_list:
     - recipe[mysql_test::service_single]
@@ -318,7 +318,7 @@ suites:
        version: '5.7'
 
   # multi
-       
+
   - name: service50-multi
     run_list:
     - recipe[mysql_test::service_multi]
