--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -1,7 +1,7 @@
 driver:
   name: dokken
-  chef_version: latest
   privileged: true # because Docker and SystemD/Upstart
+  chef_version: current
 
 transport:
   name: dokken
@@ -19,7 +19,7 @@ platforms:
     platform: rhel
     pid_one_command: /sbin/init
     intermediate_instructions:
-      - RUN yum install -y which initscripts
+      - RUN yum install -y which initscripts net-tools wget
   run_list:
     - recipe[mysql_test::yum_repo]
 
@@ -29,7 +29,7 @@ platforms:
     platform: rhel
     pid_one_command: /sbin/init
     intermediate_instructions:
-      - RUN yum -y install which initscripts
+      - RUN yum -y install which initscripts net-tools wget
   run_list:
     - recipe[mysql_test::yum_repo]
 
@@ -40,7 +40,7 @@ platforms:
     pid_one_command: /usr/lib/systemd/systemd
     intermediate_instructions:
       - RUN yum clean all
-      - RUN yum -y install net-tools lsof
+      - RUN yum -y install lsof which systemd-sysv initscripts wget net-tools
   run_list:
     - recipe[mysql_test::yum_repo]
 
@@ -49,7 +49,7 @@ platforms:
     image: fedora:24
     pid_one_command: /usr/lib/systemd/systemd
     intermediate_instructions:
-      - RUN dnf -y install yum which
+      - RUN dnf -y install yum which systemd-sysv initscripts wget net-tools
   run_list:
     - recipe[mysql_test::yum_repo]
 
@@ -59,7 +59,7 @@ platforms:
 #     image: debian:7
 #     intermediate_instructions:
 #       - RUN /usr/bin/apt-get update
-#       - RUN /usr/bin/apt-get install apt-transport-https net-tools -y
+#       - RUN /usr/bin/apt-get install apt-transport-https lsb-release procps net-tools -y
 
 - name: debian-8
   driver:
@@ -67,7 +67,7 @@ platforms:
     pid_one_command: /bin/systemd
     intermediate_instructions:
       - RUN /usr/bin/apt-get update
-      - RUN /usr/bin/apt-get install apt-transport-https net-tools -y
+      - RUN /usr/bin/apt-get install apt-transport-https lsb-release procps net-tools -y
 
 - name: ubuntu-12.04
   driver:
@@ -75,7 +75,7 @@ platforms:
     pid_one_command: /sbin/init
     intermediate_instructions:
       - RUN /usr/bin/apt-get update
-      - RUN /usr/bin/apt-get install apt-transport-https net-tools -y
+      - RUN /usr/bin/apt-get install apt-transport-https lsb-release procps net-tools -y
 
 - name: ubuntu-14.04
   driver:
@@ -83,25 +83,29 @@ platforms:
     pid_one_command: /sbin/init
     intermediate_instructions:
       - RUN /usr/bin/apt-get update
-      - RUN /usr/bin/apt-get install apt-transport-https net-tools -y
+      - RUN /usr/bin/apt-get install apt-transport-https lsb-release procps net-tools -y
 
 - name: ubuntu-16.04
   driver:
     image: ubuntu:16.04
-    pid_one_command: /sbin/init
+    pid_one_command: /bin/systemd
     intermediate_instructions:
       - RUN /usr/bin/apt-get update
-      - RUN /usr/bin/apt-get install apt-transport-https net-tools -y
+      - RUN /usr/bin/apt-get install apt-transport-https lsb-release procps net-tools -y
 
 - name: opensuse-13.2
   driver:
     image: opensuse:13.2
     pid_one_command: /bin/systemd
+    intermediate_instructions:
+      - RUN zypper --non-interactive install aaa_base perl-Getopt-Long-Descriptive which net-tools
 
-- name: opensuse-42.1
+- name: opensuse-leap
   driver:
-    image: opensuse:42.1
+    image: opensuse:leap
     pid_one_command: /bin/systemd
+    intermediate_instructions:
+      - RUN zypper --non-interactive install aaa_base perl-Getopt-Long-Descriptive which hostname
 
 suites:
   #
@@ -157,7 +161,7 @@ suites:
       'fedora-24',
       'ubuntu-14.04',
       'opensuse-13.2',
-      'opensuse-42.1'
+      'opensuse-leap'
     ]
 
   - name: installation_client_package-57
@@ -227,7 +231,7 @@ suites:
       'fedora-24',
       'ubuntu-14.04',
       'opensuse-13.2',
-      'opensuse-42.1'
+      'opensuse-leap'
     ]
 
   - name: installation_server_package-57
@@ -297,7 +301,7 @@ suites:
       'fedora-24',
       'ubuntu-14.04',
       'opensuse-13.2',
-      'opensuse-42.1'
+      'opensuse-leap'
      ]
     attributes:
       mysql:
@@ -380,7 +384,7 @@ suites:
       'fedora-24',
       'ubuntu-14.04',
       'opensuse-13.2',
-      'opensuse-42.1'
+      'opensuse-leap'
      ]
     attributes:
       mysql:
@@ -458,7 +462,7 @@ suites:
       'fedora-24',
       'ubuntu-14.04',
       'opensuse-13.2',
-      'opensuse-42.1'
+      'opensuse-leap'
      ]
     attributes:
       mysql:
@@ -498,5 +502,5 @@ suites:
       'ubuntu-16.04',
       'fedora-24',
       'opensuse-13.2',
-      'opensuse-42.1'
+      'opensuse-leap'
      ]
