--- a/.travis.yml
+++ b/.travis.yml
@@ -18,23 +18,11 @@ branches:
 
 services: docker
 
-env:
-  matrix:
-  - INSTANCE=smoke-centos-6
-  - INSTANCE=smoke-centos-7
-  - INSTANCE=smoke-fedora-24
-  - INSTANCE=smoke-debian-8
-  - INSTANCE=smoke-ubuntu-1204
-  - INSTANCE=smoke-ubuntu-1404
-  - INSTANCE=smoke-ubuntu-1604
-  - INSTANCE=smoke-opensuse-132
-  - INSTANCE=smoke-opensuse-leap
-
 before_script:
   - sudo iptables -L DOCKER || ( echo "DOCKER iptables chain missing" ; sudo iptables -N DOCKER )
   - eval "$(/opt/chefdk/bin/chef shell-init bash)"
 
-script: KITCHEN_LOCAL_YAML=.kitchen.docker.yml /opt/chefdk/embedded/bin/kitchen verify ${INSTANCE}
+script: KITCHEN_LOCAL_YAML=.kitchen.docker.yml /opt/chefdk/embedded/bin/kitchen test
 
 matrix:
   include:
