--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,92 @@ branches:
 
 services: docker
 
+env:
+  matrix:
+  - INSTANCE=installation-client-package-51-centos-6
+  - INSTANCE=installation-client-package-55-centos-6
+  - INSTANCE=installation-client-package-55-centos-7
+  - INSTANCE=installation-client-package-55-debian-8
+  - INSTANCE=installation-client-package-55-ubuntu-1204
+  - INSTANCE=installation-client-package-55-ubuntu-1404
+  - INSTANCE=installation-client-package-56-centos-6
+  - INSTANCE=installation-client-package-56-centos-7
+  - INSTANCE=installation-client-package-56-fedora-24
+  - INSTANCE=installation-client-package-56-ubuntu-1404
+  - INSTANCE=installation-client-package-56-opensuse-132
+  - INSTANCE=installation-client-package-56-opensuse-leap
+  - INSTANCE=installation-client-package-57-centos-6
+  - INSTANCE=installation-client-package-57-centos-7
+  - INSTANCE=installation-client-package-57-fedora-24
+  - INSTANCE=installation-client-package-57-ubuntu-1604
+  - INSTANCE=installation-server-package-51-centos-6
+  - INSTANCE=installation-server-package-55-centos-6
+  - INSTANCE=installation-server-package-55-centos-7
+  - INSTANCE=installation-server-package-55-debian-8
+  - INSTANCE=installation-server-package-55-ubuntu-1204
+  - INSTANCE=installation-server-package-55-ubuntu-1404
+  - INSTANCE=installation-server-package-56-centos-6
+  - INSTANCE=installation-server-package-56-centos-7
+  - INSTANCE=installation-server-package-56-fedora-24
+  - INSTANCE=installation-server-package-56-ubuntu-1404
+  - INSTANCE=installation-server-package-56-opensuse-132
+  - INSTANCE=installation-server-package-56-opensuse-leap
+  - INSTANCE=installation-server-package-57-centos-6
+  - INSTANCE=installation-server-package-57-centos-7
+  - INSTANCE=installation-server-package-57-fedora-24
+  - INSTANCE=installation-server-package-57-ubuntu-1604
+  - INSTANCE=service51-single-centos-6
+  - INSTANCE=service55-single-centos-6
+  - INSTANCE=service55-single-centos-7
+  - INSTANCE=service55-single-debian-8
+  - INSTANCE=service55-single-ubuntu-1204
+  - INSTANCE=service55-single-ubuntu-1404
+  - INSTANCE=service56-single-centos-6
+  - INSTANCE=service56-single-centos-7
+  - INSTANCE=service56-single-fedora-24
+  - INSTANCE=service56-single-ubuntu-1404
+  - INSTANCE=service56-single-opensuse-132
+  - INSTANCE=service56-single-opensuse-leap
+  - INSTANCE=service57-single-centos-6
+  - INSTANCE=service57-single-centos-7
+  - INSTANCE=service57-single-fedora-24
+  - INSTANCE=service57-single-ubuntu-1604
+  - INSTANCE=service55-multi-centos-6
+  - INSTANCE=service55-multi-centos-7
+  - INSTANCE=service55-multi-debian-8
+  - INSTANCE=service55-multi-ubuntu-1204
+  - INSTANCE=service55-multi-ubuntu-1404
+  - INSTANCE=service56-multi-centos-6
+  - INSTANCE=service56-multi-centos-7
+  - INSTANCE=service56-multi-fedora-24
+  - INSTANCE=service56-multi-ubuntu-1404
+  - INSTANCE=service56-multi-opensuse-132
+  - INSTANCE=service56-multi-opensuse-leap
+  - INSTANCE=service57-multi-centos-6
+  - INSTANCE=service57-multi-centos-7
+  - INSTANCE=service57-multi-fedora-24
+  - INSTANCE=service57-multi-ubuntu-1604
+  - INSTANCE=config55-centos-6
+  - INSTANCE=config55-centos-7
+  - INSTANCE=config55-debian-8
+  - INSTANCE=config55-ubuntu-1204
+  - INSTANCE=config55-ubuntu-1404
+  - INSTANCE=config56-centos-6
+  - INSTANCE=config56-centos-7
+  - INSTANCE=config56-fedora-24
+  - INSTANCE=config56-ubuntu-1404
+  - INSTANCE=config56-opensuse-132
+  - INSTANCE=config56-opensuse-leap
+  - INSTANCE=config57-centos-6
+  - INSTANCE=config57-centos-7
+  - INSTANCE=config57-fedora-24
+  - INSTANCE=config57-ubuntu-1604
+
 before_script:
   - sudo iptables -L DOCKER || ( echo "DOCKER iptables chain missing" ; sudo iptables -N DOCKER )
   - eval "$(/opt/chefdk/bin/chef shell-init bash)"
 
-# Run ALL test cases
-script: KITCHEN_LOCAL_YAML=.kitchen.docker.yml /opt/chefdk/embedded/bin/kitchen test
+script: KITCHEN_LOCAL_YAML=.kitchen.docker.yml /opt/chefdk/embedded/bin/kitchen verify ${INSTANCE}
 
 matrix:
   include:
